# ntcir19-pretrained-model-retrieval

./: .gitignore  README.md  aggregate_results.py  bert-models.xlsx  bert-tasks.xlsx  cli.py  config.py  config.toml  main.py  pyproject.toml  run_assigned.py  trainer.py  utils.py
.github/: copilot-instructions.md
ntcir19_pretrained_model_retrieval/: __init__.py  cli.py  config.py  logger_setup.py  trainer.py  utils.py
